--- a/Interfaces/practicas/cuadro-mondrian/index.css
+++ b/Interfaces/practicas/cuadro-mondrian/index.css
@@ -1,10 +1,14 @@
+:root{
+  color-scheme: light dark;
+}
+
 #painting {
     height: 400px;
     width: 400px;
     background: #fff4db;    
     margin-top: 30px;
     margin: auto;
-    box-shadow: 10px 10px 0px #8d8d8d;
+    
   }
   
   /* Box IDs */
